--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,7 @@
     <title>my-app</title>
   </head>
   <body>
-    <div id="app">
-      <div class="content"></div>
-    </div>
-    <script type="module" src="./main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="./main.jsx"></script>
   </body>
 </html>
